--- a/index.html
+++ b/index.html
@@ -23,29 +23,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
-    <script>
-
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCh-323pn0rAagXRgXwslRi2LoFq6xHKNs",
-            authDomain: "smartbin-b3035.firebaseapp.com",
-            projectId: "smartbin-b3035",
-            storageBucket: "smartbin-b3035.firebasestorage.app",
-            messagingSenderId: "337743596404",
-            appId: "1:337743596404:web:5ab1efe98b1a7505e5fa21",
-            measurementId: "G-19PFSY4ZD4"
-        };
-
-        const app = initializeApp(firebaseConfig);
-        const db = firebase.database();
-
-        const jumlahSampahRef = db.ref("jumlah_sampah");
-        jumlahSampahRef.on("value", (snapshot) => {
-            const jumlah = snapshot.val();
-            document.getElementById("jumlahSampah").innerText = jumlah;
-        });
-    </script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
