--- a/index.html
+++ b/index.html
@@ -21,9 +21,32 @@
     <h1>Jumlah Sampah Masuk</h1>
     <div class="counter" id="jumlahSampah">0</div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.11/firebase-database-compat.js"></script>
-    <script type="module" src="script.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-database-compat.js"></script>
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+        import { getFirestore, doc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyCh-323pn0rAagXRgXwslRi2LoFq6xHKNs",
+            authDomain: "smartbin-b3035.firebaseapp.com",
+            projectId: "smartbin-b3035",
+            storageBucket: "smartbin-b3035.firebasestorage.app",
+            messagingSenderId: "337743596404",
+            appId: "1:337743596404:web:5ab1efe98b1a7505e5fa21",
+            measurementId: "G-19PFSY4ZD4"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+        const jumlahRef = doc(db, "sampah", "counter");
+
+        onSnapshot(jumlahRef, (doc) => {
+            if (doc.exists()) {
+                document.getElementById("jumlahSampah").innerText = doc.data().jumlah;
+            }
+        });
+    </script>
 </body>
 
 </html>
