--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                         <i class="fas fa-info-circle"></i> Tentang
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="scan-sampah.html" class="nav-link scan-btn">
+                        <i class="fas fa-camera"></i> Scan Sampah
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -193,6 +198,9 @@
   
         document.querySelectorAll('.nav-link').forEach(link => {
             link.addEventListener('click', (e) => {
+                // Skip for scan-sampah button which should navigate to a new page
+                if (link.classList.contains('scan-btn')) return;
+                
                 e.preventDefault();
                 const targetPage = link.dataset.page;
                 
