--- a/scan-sampah.html
+++ b/scan-sampah.html
@@ -414,6 +414,7 @@
 
                 const result = await response.json();
                 resultText.textContent = result.jenis;
+                console.log('📥 Result from API:', result);
                 classificationResult.style.display = 'flex';
 
                 cameraControls.innerHTML = `
